syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message OrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message GetOrderRequest{
  string id = 1;
}

message ListOrderRequest{
}

message OrderResponseList{
  repeated OrderResponse createOrderResponses =1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc CreateOrderStream(stream CreateOrderRequest) returns (OrderResponseList){};
  rpc getOrder(GetOrderRequest) returns (OrderResponse);
  rpc ListOrders(ListOrderRequest) returns (OrderResponseList);

}

//protoc  --go_out=. --go-grpc_out=. internal/infra/grpc/protofiles/order.proto